--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <li><a href="activities.html">Activities</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li>New List Item</li>
         </ol>
       </nav>
     </header>
@@ -21,6 +22,10 @@
     <div class="page">
       <h1>Sammy Student</h1>
       <p>Welcome to my site.</p>
+    </div>
+
+    <div>
+        <p>Paragraph in new divider</p>
     </div>
 
     <footer>
