--- a/about.html
+++ b/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BYECXY2VYB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BYECXY2VYB');
+</script>
     <meta charset="utf-8">
     <title>JT Ennen | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
